# changepoint_cython

./: .gitignore  Makefile  README.md  build.py  environment.yml  pyproject.toml  requirements  requirements.txt  setup.py  test_segmentation.py  test_segmentation_multiple.py
.github/workflows/: publish pypi prelease.yml  python-package.yml
data/: 2120913D.las
pychangepoints/: __init__.py  algo_changepoints.py  cost_function.pxd  cost_function_multiple.pxd  mutiple_algos.html  mutiple_algos.pyx  nppelt.pyx  pelt_cython.html  pelt_cython.pyx  utils.pxd
tests/: test_seg.py
